--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -23,7 +23,7 @@ const next = pageNum < totalPages ? "" : "disabled";
 
 <Layout title={`Posts | ${SITE.title}`}>
   <Header activeNav="posts" />
-  <Main pageTitle="Florian Knip" pageDesc="Cloud Infrastructure Engineer - DevOps">
+  <Main pageTitle="Posts" pageDesc="All the articles I've posted.">
     <ul>
       {
         posts.map(({ data }) => (
